fix image overflow

--- a/src/app/styles/about.module.scss
+++ b/src/app/styles/about.module.scss
@@ -53,14 +53,22 @@
                 display: flex;
                 align-items: center;
                 justify-content: flex-end;
-                position: relative;
-
-                    
-                    img{
-                        width: 56.622rem;
-                        height: 60.052rem;
+                position: relative;                    
+                
+                .image-container {
+                    width: 100%;
+                
+                    > div {
+                    position: unset !important;
                     }
                 
+                    .image {
+                    object-fit: contain;
+                    width: 100% !important;
+                    position: relative !important;
+                    height: unset !important;
+                    }
+                }
             }
 
         }
