--- a/src/app/styles/favorite.module.scss
+++ b/src/app/styles/favorite.module.scss
@@ -100,6 +100,21 @@
                 position: relative;
                 // padding: 5rem 0rem;
 
+                .image-container {
+
+                    width: 100%;
+                    > div {
+                      position: unset !important;
+                    }
+                  
+                    .image {
+                      object-fit: contain;
+                      width: 100% !important;
+                      position: relative !important;
+                      height: unset !important;
+                    }
+                  }
+
             }
             .bottom-right{
                 z-index: 99;
