--- a/src/app/styles/join.module.scss
+++ b/src/app/styles/join.module.scss
@@ -50,6 +50,22 @@
                 display: flex;
                 align-items: center;
                 justify-content: center;
+                position: relative;
+
+                .image-container {
+
+                    width: 100%;
+                    > div {
+                      position: unset !important;
+                    }
+                  
+                    .image {
+                      object-fit: contain;
+                      width: 100% !important;
+                      position: relative !important;
+                      height: unset !important;
+                    }
+                  }
             }
         }
 
